# grasp_candidates_generator

./: CMakeLists.txt  README.md
cfg/: params.cfg
include/gpg/: cloud_camera.h  grasp_set.h  plot.h
include/grasp_candidates_generator/: antipodal.h  candidates_generator.h  cloud_camera.h  config_file.cpp  config_file.h  eigen_utils.h  finger_hand.h  frame_estimator.h  grasp.h  grasp_candidates_generator.h  grasp_hypothesis.h  grasp_set.h  hand_search.h  hypothesis_set.h  local_frame.h  plot.h  point_list.h  uniform_table.h
src/: antipodal.cpp  candidates_generator.cpp  cloud_camera.cpp  config_file.cpp  finger_hand.cpp  frame_estimator.cpp  generate_candidates.cpp  grasp_candidates_generator.cpp  grasp_hypothesis.cpp  grasp_set.cpp  hand_search.cpp  hypothesis_set.cpp  local_frame.cpp  plot.cpp  point_list.cpp
src/gpg/: cloud_camera.cpp  grasp_set.cpp  plot.cpp
src/grasp_candidates_generator/: antipodal.cpp  candidates_generator.cpp  cloud_camera.cpp  eigen_utils.cpp  grasp.cpp  grasp_set.cpp  hand_search.cpp  plot.cpp  point_list.cpp  uniform_table.cpp
